--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -2,5 +2,8 @@
     "$schema": "https://raw.githubusercontent.com/microsoft/vcpkg-tool/main/docs/vcpkg-configuration.schema.json",
     "overlay-ports": [
         "./overlay-ports"
+    ],
+    "overlay-triplets": [
+        "./overlay-triplets"
     ]
 }
