Try to find OPENUSD_INSTALL_PATH from env if not already defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ option(ENABLE_TESTS "Enable tests" ON)
 # Add the path to the CMake helpers and import them.
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
+# Try to import from the environment variable only if OPENUSD_INSTALL_PATH isn’t already set
+if(NOT DEFINED OPENUSD_INSTALL_PATH AND DEFINED ENV{OPENUSD_INSTALL_PATH})
+    set(OPENUSD_INSTALL_PATH "$ENV{OPENUSD_INSTALL_PATH}" CACHE PATH "Path to local USD install")
+endif()
+
 # Includes various helpers.
 include(helpers)
 
