Update .gitmodules for vcpkg submodule move to externals/vcpkg (#81)

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://raw.githubusercontent.com/microsoft/vcpkg-tool/main/docs/vcpkg-configuration.schema.json",
     "overlay-ports": [
-        "./overlay-ports"
+        "./externals/overlay-ports"
     ],
     "overlay-triplets": [
-        "./overlay-triplets"
+        "./externals/overlay-triplets"
     ]
 }
