--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ build/
 install/
 out/
 include/hvt/namespace.h
-CMakeUserPresets.json
 .vs/
 
-# vcpkg local build artifacts
-/vcpkg_installed/
-CMakeUserPresets.json # optional, to keep it local-only for each dev
+# Ignore user-specific CMake presets
+CMakeUserPresets.json
