--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vcpkg"]
-	path = vcpkg
-	url = https://github.com/microsoft/vcpkg.git
+[submodule "externals/vcpkg"]
+    path = externals/vcpkg
+    url = https://github.com/microsoft/vcpkg.git
