--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: main
 
 on:
+  push:
+    paths-ignore:
+      - '**.md'
   pull_request:
     paths-ignore:
       - '**.md'
@@ -20,21 +23,21 @@ jobs:
           os: ubuntu-22.04
           compiler: clang
           compiler_version: "11"
-          python: 3.7
+          python: 3.7.17
           build_config: 'release'
 
         - name: MacOS_Xcode_15_Python37
           os: macos-14
           compiler: xcode
           compiler_version: "15.4"
-          python: 3.7
+          python: 3.7.17
           build_config: 'release'
 
         - name: Windows_VS2022_x64_Python37
           os: windows-2022
           architecture: x64
           python: 3.7
-          build_config: 'release'
+          build_config: 'debug'
 
     steps:
     - name: Sync Repository
