--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,25 +15,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+      # about runnershttps://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners
         include:
         - name: Linux_Clang_11_Python37
           os: ubuntu-22.04
           compiler: clang
           compiler_version: "11"
-          python: 3.9
           build_config: 'release'
 
         - name: MacOS_Xcode_15_Python37
           os: macos-14
           compiler: xcode
           compiler_version: "15.4"
-          python: 3.9
           build_config: 'release'
 
         - name: Windows_VS2022_x64_Python37
           os: windows-2022
-          architecture: x64
-          python: 3.9
           build_config: 'debug'
 
     steps:
@@ -76,25 +73,32 @@ jobs:
           fi
         fi
 
-    - name: Install Python ${{ matrix.python }}
-      if: matrix.python != 'None'
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python }}
-        architecture: ${{ matrix.architecture }}
-
-    - name: Install Python Dependencies
-      if: matrix.python != 'None'
-      run: pip install setuptools
-
     - name: CMake Generate
       run: cmake --preset ${{matrix.build_config}}
+
+    - name: Cache CMake configuration
+      uses: actions/cache@v4
+      with:
+        path: |
+          build/${{ matrix.build_config }}/CMakeFiles
+          build/${{ matrix.build_config }}/cmake_install.cmake
+        key: ${{ runner.os }}-cmake-${{ matrix.build_config }}-${{ hashFiles('CMakeLists.txt', 'CMakePresets.json', 'cmake/helpers.cmake', 'cmake/VcpkgSetup.cmake', 'cmake/VcpkgChooseTriplet.cmake') }}
+        restore-keys: |
+          ${{ runner.os }}-cmake-${{ matrix.build_config }}-
+
+    - name: Cache vcpkg packages
+      uses: actions/cache@v4
+      with:
+        path: |
+          build/${{ matrix.build_config }}/vcpkg_installed
+        key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json') }}
+        restore-keys: |
+          ${{ runner.os }}-vcpkg-
 
     - name: CMake Build
       run: cmake --build --preset ${{matrix.build_config}}
 
     - name: CMake Unit Tests
       run: ctest --preset ${{matrix.build_config}}
-      working-directory: build
 
     
