--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       matrix:
       # about runnershttps://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners
         include:
-        - name: Linux_Clang_11_Python37
-          os: ubuntu-22.04
-          compiler: clang
-          compiler_version: "11"
-          build_config: 'release'
+        # - name: Linux_Clang_11_Python37
+        #   os: ubuntu-22.04
+        #   compiler: clang
+        #   compiler_version: "11"
+        #   build_config: 'release'
 
         - name: MacOS_Xcode_15_Python37
           os: macos-14
@@ -29,9 +29,9 @@ jobs:
           compiler_version: "15.4"
           build_config: 'release'
 
-        - name: Windows_VS2022_x64_Python37
-          os: windows-2022
-          build_config: 'debug'
+        # - name: Windows_VS2022_x64_Python37
+        #   os: windows-2022
+        #   build_config: 'debug'
 
     steps:
     - name: Sync Repository
@@ -91,14 +91,14 @@ jobs:
         key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json', 'vcpkg-configuration.json') }}
         restore-keys: |
           ${{ runner.os }}-vcpkg-
-          
+
     - name: CMake Generate
       run: cmake --preset ${{matrix.build_config}}
 
     - name: CMake Build
       run: cmake --build --preset ${{matrix.build_config}}
 
-    - name: CMake Unit Tests
-      run: ctest --preset ${{matrix.build_config}}
+    # - name: CMake Unit Tests
+    #   run: ctest --preset ${{matrix.build_config}}
 
     
