Add vcpkg support for dependency management (#52)
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>
Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>
Co-authored-by: Patrick Hodoul <patrick.hodoul@autodesk.com>
Co-authored-by: Aleksi Sapon <aleksi.sapon@autodesk.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ build/
 install/
 out/
 include/hvt/namespace.h
-CMakeUserPresets.json
 .vs/
+
+# Ignore user-specific CMake presets
+CMakeUserPresets.json
