Use release path for debug on Windows when not specified
Mixing debug and release is likely to cause a broken build on Windows.
But assuming most of the time, the multi-config flag is not used in a real multi-config way, we decided not to fail the build to avoid forcing everyone to use an extra variable that will almost always be the same as the OPENUSD_INSTALL_PATH anyways...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,9 +143,9 @@ if (OPENUSD_INSTALL_PATH AND EXISTS "${OPENUSD_INSTALL_PATH}")
     if (_MULTI_CONFIG AND "Debug" IN_LIST CMAKE_CONFIGURATION_TYPES)
         if (NOT OPENUSD_INSTALL_PATH_DEBUG OR NOT EXISTS "${OPENUSD_INSTALL_PATH_DEBUG}")
             if(WIN32)
-                message(FATAL_ERROR "The local OpenUSD debug install path is missing: cannot safely default to the release build on Windows")
+                message(WARNING "The local OpenUSD debug install path is missing: on Windows, mixing debug and release will most likely result in a broken build! Defaulting to the release build.")
             else()
-                message(WARNING "The local OpenUSD debug install path is missing: defaulting to the release one")
+                message(STATUS "The local OpenUSD debug install path is missing: defaulting to the release one")
             endif()
             set(OPENUSD_INSTALL_PATH_DEBUG "${OPENUSD_INSTALL_PATH}")
         endif()
