--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         # Define the operating systems to test (https://github.com/actions/runner-images)
-        os: [windows-2022, ubuntu-24.04, macos-14]
-        build_type: [debug, release]
+        os: [ubuntu-24.04]
+        build_type: [debug]
 
     steps:
     - name: Checkout repo
@@ -53,8 +53,8 @@ jobs:
       run: cmake --build --preset ${{ matrix.build_type }}
 
     # Unit tests still failing using pixar USD.
-    #- name: Test
-    #  run: ctest --preset ${{ matrix.build_type }}
+    - name: Test
+      run: ctest --preset ${{ matrix.build_type }}
 
     - name: Upload vcpkg failure logs
       if: failure()
