[OGSMOD-7581] Add reusable setup-vcpkg-cache workflow for NuGet-based binary caching

--- a/.github/workflows/ci-full.yaml
+++ b/.github/workflows/ci-full.yaml
@@ -20,3 +20,5 @@ jobs:
     with:
       os: ${{ matrix.os }}
       build_type: ${{ matrix.build_type }}
+    secrets:
+      GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
