--- a/.github/workflows/ci-minimal.yaml
+++ b/.github/workflows/ci-minimal.yaml
@@ -1,13 +1,30 @@
-name: CI Minimal (Linux Debug only)
+name: CI Minimal (Linux-Debug or choice)
 
 on:
   pull_request:
+  workflow_dispatch:
+    inputs:
+      platform:
+        description: 'Platform to build on'
+        required: false
+        default: 'linux'
+        type: choice
+        options: [linux, windows, mac]
+      build_type:
+        description: 'CMake build type'
+        required: false
+        default: 'debug'
+        type: choice
+        options: [debug, release]
 
 jobs:
-  linux-debug:
+  minimal-build:
+    name: ${{ github.event.inputs.platform || 'linux' }}-${{ github.event.inputs.build_type || 'debug' }}
     uses: ./.github/workflows/ci-steps.yaml
     with:
-      os: ubuntu-24.04
-      build_type: debug
+      os: ${{ github.event.inputs.platform == 'linux' && 'ubuntu-24.04' || 
+        github.event.inputs.platform == 'windows' && 'windows-2022' || 
+        github.event.inputs.platform == 'mac' && 'macos-14' || 'ubuntu-24.04' }}
+      build_type: ${{ github.event.inputs.build_type || 'debug' }}
     secrets:
       GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
